# CAOS_RotorVitals

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  VERSION  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-precompute.txt  requirements.txt  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md
data-pipeline/rotorlab/: __init__.py  live.py  pipeline.py  registry.py
data/derived/: cwru-benchmark.json  rv-cwru-samples.json  rv-learned-metrics.json  rv-rul-benchmark.json
data/examples/: records.csv
deploy/: pages.md
docs/: README.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_the-live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md  09_leakage-demo.md  README.md
docs/cases/: README.md
docs/guides/: 00_run.md  (+5 more)
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  rv-allmodes.mjs  rv-rul-instants.mjs  vite.config.ts
public/: CNAME  rv-ae.onnx  rv-learned-metrics.json  wdcnn.onnx
scripts/: README.md  cross_validate_rul.py  fetch-data.ps1  fetch-data.sh  precompute.ps1  precompute.sh  setup.ps1  setup.sh
src/: App.tsx  i18n.tsx  main.tsx  rotorvitals.css  styles.css  theme.ts
tests/: conftest.py  test_classical_ml.py  test_contract.py  test_cross_dataset.py  test_cross_severity.py  test_leakage.py  test_manifest.py  test_pf_rul.py  test_pipeline_smoke.py  test_rul_models.py
(+210 files in other folders)
